Increase nav brand size to sorta fix weird nav issue on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,9 @@ body {
 .button {
     background-color: var(--primary-color);
 }
+nav .brand {
+    max-width: 75%;
+}
 
 .navbar {
     height: 5em;
